# Rust-AI

./: README.md
rust-ollama-demo/: Cargo.toml  README.md
rust-ollama-demo/src/: main.rs
rust-rag-pdf/: Cargo.toml  README.md
rust-rag-pdf/src/: embeddings.rs  main.rs  pdf.rs  rag.rs
